Fixed z-index of assembly chat button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
 }
 
 .fixed-bottom {
+  z-index: 9999;
   position: fixed;
   bottom: 0;
 
